# keylogger

./: .gitignore  CMakeLists.txt  README.md
src/: log_viewer.cpp  logger.cpp  logger.hpp  main.cpp  net_common.cpp  net_common.hpp  net_sender.cpp  net_sender.hpp  service.cpp  service.hpp  viewer.cpp  viewer.hpp
src/platform/: keylogger.hpp  keylogger_factory.cpp  keylogger_linux.cpp  keylogger_linux.hpp  keylogger_mac.hpp  keylogger_mac.mm  keylogger_win.cpp  keylogger_win.hpp
